# ratata

./: .gitignore  index.html  package.json  pnpm-lock.yaml  renovate.json  tailwind.config.js
backend/: Cargo.toml
backend/src/: main.rs
src/: App.svelte  InstanceCard.svelte  Sidebar.svelte
src/pages/: InstanceListPage.svelte
