[package]
name = "dye_ratata_backend"
version = "0.0.1"
edition = "2021"

[dependencies]
bollard = "0.16.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
